<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.SecondFragment">

    <EditText
        android:id="@+id/EditTextStudies"
        android:hint="@string/place_of_study"
        android:layout_width="250dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="170dp"
        android:backgroundTint="@color/black"
        android:textColor="@color/black"
        android:textColorHint="@color/black"/>

    <EditText
        android:id="@+id/EditTextWork"
        android:hint="@string/place_of_work"
        app:layout_constraintTop_toBottomOf="@id/EditTextStudies"
        app:layout_constraintStart_toStartOf="@id/EditTextStudies"
        app:layout_constraintEnd_toEndOf="@id/EditTextStudies"
        android:layout_marginTop="16dp"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:textColor="@color/black"
        android:backgroundTint="@color/black"
        android:textColorHint="@color/black"/>

    <TextView
        android:textColor="@color/white"
        android:id="@+id/FirstAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="@string/hello"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:textColor="@color/white"
        android:id="@+id/FirstFloor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/hello"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:textColor="@color/white"
        android:id="@+id/ElementaryName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/hello"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:textColor="@color/white"
        android:id="@+id/ElementarySurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ButtonSecond"
        app:layout_constraintTop_toBottomOf="@id/EditTextWork"
        app:layout_constraintEnd_toEndOf="@id/EditTextWork"
        app:layout_constraintStart_toStartOf="@id/EditTextWork"
        android:layout_marginTop="20dp"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:text="@string/send"/>

</androidx.constraintlayout.widget.ConstraintLayout>